--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -8,7 +8,7 @@
   <string name="pref_theme_value_day" translatable="false">day</string>
   <string name="pref_theme_value_night" translatable="false">night</string>
 
-  <string name="pref_sort_value_default" translatable="false">@string/pref_sort_value_new</string>
-  <string name="pref_sort_value_new" translatable="false">new</string>
-  <string name="pref_sort_value_old" translatable="false">old</string>
+  <string name="pref_sort_value_default" translatable="false">@string/pref_sort_value_newest_first</string>
+  <string name="pref_sort_value_newest_first" translatable="false">newest_first</string>
+  <string name="pref_sort_value_oldest_first" translatable="false">oldest_first</string>
 </resources>
