--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -77,5 +77,9 @@
       android:entryValues="@array/array_open_links_values"
       android:key="pref_open_links_with"
       android:title="@string/open_links_with" />
+    <SwitchPreference
+      android:defaultValue="false"
+      android:key="pref_preload_custom_tab"
+      android:title="@string/preload_custom_tab" />
   </PreferenceCategory>
 </PreferenceScreen>
