--- a/app/src/main/res/layout/fragment_reader_tablet.xml
+++ b/app/src/main/res/layout/fragment_reader_tablet.xml
@@ -4,6 +4,8 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="?attr/windowBackgroundColor"
+  android:scrollbarStyle="outsideOverlay"
+  android:scrollbars="vertical"
   tools:context="com.nononsenseapps.feeder.ui.ReaderFragment">
 
   <LinearLayout
