Implemented parallel load of images in Reader view
Switched to Coil for image loading.

This also implements an attempt at not enlarging certain small social
media buttons

--- a/app/src/main/res/layout/list_story_item.xml
+++ b/app/src/main/res/layout/list_story_item.xml
@@ -59,6 +59,7 @@
       android:layout_width="@dimen/item_img_def_width"
       android:layout_height="0dp"
       android:visibility="gone"
+      android:scaleType="centerCrop"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
