--- a/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
+++ b/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
@@ -15,7 +15,6 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/navdrawer"
   android:layout_width="@dimen/navdrawer_width"
   android:layout_height="match_parent"
@@ -26,13 +25,10 @@
   android:orientation="vertical"
   android:theme="?attr/navBarTheme">
 
-  <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/navdrawer_list"
+  <androidx.compose.ui.platform.ComposeView
+    android:id="@+id/compose_navdrawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    tools:layoutManager="LinearLayoutManager"
-    tools:listitem="@layout/view_feed_tag" />
+    android:layout_height="match_parent" />
 
 
 </LinearLayout>
