--- a/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
+++ b/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
@@ -15,6 +15,7 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/navdrawer"
   android:layout_width="@dimen/navdrawer_width"
   android:layout_height="match_parent"
@@ -25,10 +26,12 @@
   android:orientation="vertical"
   android:theme="?attr/navBarTheme">
 
-  <androidx.compose.ui.platform.ComposeView
-    android:id="@+id/compose_navdrawer"
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/navdrawer_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
-
+    android:layout_height="match_parent"
+    android:scrollbars="vertical"
+    tools:layoutManager="LinearLayoutManager"
+    tools:listitem="@layout/view_feed_tag" />
 
 </LinearLayout>
