--- a/app/src/main/res/values/string_arrays.xml
+++ b/app/src/main/res/values/string_arrays.xml
@@ -54,6 +54,14 @@
     <item>3</item>
   </string-array>
 
+  <array name="array_open_feed_article_options">
+    <item>@string/use_app_default</item>
+    <item>@string/open_in_reader</item>
+    <item>@string/open_in_webview</item>
+    <item>@string/open_in_default_browser</item>
+    <item>@string/open_in_custom_tab</item>
+  </array>
+
   <!-- Note that these arrays share semantic value between values -->
   <string-array name="array_open_links_options">
     <item>@string/open_in_webview</item>
