--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -8,6 +8,7 @@
   <locale android:name="el"/>
   <locale android:name="en"/>
   <locale android:name="es"/>
+  <locale android:name="eu"/>
   <locale android:name="fa"/>
   <locale android:name="fi"/>
   <locale android:name="fr"/>
